# easycl

./: CMakeLists.txt
sources/: CMakeLists.txt  main.cpp
sources/lodepng/: CMakeLists.txt  lodepng.cpp
sources/modules/: Basic.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Conversions.cpp  Conversions.h  Filters.cpp  Filters.h  Image.cpp  Image.h  OpenCL.cpp  OpenCL.h  OpenCLIPP.h  Program.cpp  Program.h  SImage.h  Transform.cpp  Transform.h  WorkGroup.h  kernel_helpers.h  preprocessor.h
sources/modules/Programs/: Arithmetic.cpp  Arithmetic.h  Blob.h  FFT.h  Histogram.h
